[project]
name = "aoc-2024"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E4",
    "E7",
    "E9",
    "I",
    "UP",
    "YTT",
    "ASYNC",
    "BLE",
    "FBT",
    "B",
    "C4",
    "DTZ",
    "ISC",
    "G",
    "PIE",
    "PYI",
    "SLOT",
    "SIM",
    "PTH",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["TRY003", "PIE790", "FBT001", "B027"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.pyright]
typeCheckingMode = "strict"
disableBytesTypePromotions = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
deprecateTypingAliases = true
enableExperimentalFeatures = true
reportAssertAlwaysTrue = "information"
reportUnusedExpression = "information"
reportConstantRedefinition = "warning"
reportDeprecated = "information"
reportDuplicateImport = "information"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "warning"
reportMatchNotExhaustive = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "none"
reportPrivateUsage = "none"
reportTypeCommentUsage = "information"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryCast = "information"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportUnusedCoroutine = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "warning"
reportUntypedNamedTuple = "warning"
reportCallInDefaultInitializer = "warning"
reportImportCycles = "warning"
reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
reportUninitializedInstanceVariable = "warning"
reportFunctionMemberAccess = "warning"
reportOverlappingOverload = "warning"

